%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: armsAnimator
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: ChestCompression
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: UseStethoscope
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: NeedleDecomp
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Larygynoscope
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Syringe
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Intubation
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Sunction
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: StartCC
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: EndCC
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110272663}
  m_TransitionDuration: .115384571
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: ChestCompression
    m_EventTreshold: 0
    m_ExitTime: .884615421
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110106145
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110254033}
  m_DstState: {fileID: 110204808}
  m_TransitionDuration: .0550458543
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .944954157
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107887
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110235120}
  m_TransitionDuration: .054545451
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: UseStethoscope
    m_EventTreshold: 0
    m_ExitTime: .945454538
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110111838
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110242845}
  m_DstState: {fileID: 110230232}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110120225
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110221970}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .181818157
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Sunction
    m_EventTreshold: 0
    m_ExitTime: 3.27999997
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110122600
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110266400}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110125542
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110272663}
  m_DstState: {fileID: 110221970}
  m_TransitionDuration: .0705882311
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .929411769
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110127248
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110207592}
  m_DstState: {fileID: 110209637}
  m_TransitionDuration: .0923076719
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .907692313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110129482
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110267744}
  m_TransitionDuration: .115384571
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Sunction
    m_EventTreshold: 0
    m_ExitTime: .884615421
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110131322
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110210885}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110142693
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110270884}
  m_DstState: {fileID: 110207708}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110142830
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110204808}
  m_DstState: {fileID: 110240075}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110143060
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110230232}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110144184
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110209637}
  m_DstState: {fileID: 110266400}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110146445
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110207708}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Sunction
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110150997
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110272663}
  m_DstState: {fileID: 110210885}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: EndCC
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110155654
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110223416}
  m_DstState: {fileID: 110299098}
  m_TransitionDuration: .075949423
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .92405057
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110158831
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110235120}
  m_DstState: {fileID: 110270884}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: StartCC
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110160890
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110254033}
  m_TransitionDuration: .115384571
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Intubation
    m_EventTreshold: 0
    m_ExitTime: .884615421
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110168960
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110207592}
  m_TransitionDuration: .115384571
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: NeedleDecomp
    m_EventTreshold: 0
    m_ExitTime: .884615421
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110170403
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110267744}
  m_DstState: {fileID: 110223416}
  m_TransitionDuration: .0458015054
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .95419848
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110177105
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110242845}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110189519
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110221970}
  m_DstState: {fileID: 110210885}
  m_TransitionDuration: .181818157
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: EndCC
    m_EventTreshold: 0
    m_ExitTime: .818181872
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110193630
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110299098}
  m_DstState: {fileID: 110242845}
  m_TransitionDuration: .12244913
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .87755084
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110196299
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110240075}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Sunction
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 252, y: -12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110204808
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Reintubate
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400030, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 756, y: -96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110207592
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Enter Needle Decomp
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400016, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 12, y: 132, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110207708
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Exit Steth
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400026, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 132, y: -156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110209637
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Needle Decomp
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400018, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -228, y: 132, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110210885
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ExitChestComp
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 24, y: -96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110221970
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: chestCompressionLoop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110223416
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: IV -> ETT
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400036, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 252, y: 156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110230232
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Replace VT
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400032, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: 60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110235120
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Enter Steth
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400022, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 384, y: -156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110240075
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Replace VT2
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400032, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: -12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110242845
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: IV <- ETT
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400040, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: 144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110254033
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Remove VT & ETT
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400028, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: -96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110266400
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Exit Needle Decomp
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400020, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -60, y: 48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110267744
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Remove VT
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400034, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 252, y: 84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110270884
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Steth
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400024, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 252, y: -216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110272663
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: enterChestComp
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 0, y: -12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110299098
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Wait
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400038, guid: c7113c5a05b8cce4a87fe3be5e47745c, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 408, y: 216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110272663}
  - {fileID: 110221970}
  - {fileID: 110207708}
  - {fileID: 110207592}
  - {fileID: 110254033}
  - {fileID: 110240075}
  - {fileID: 110267744}
  - {fileID: 110242845}
  - {fileID: 110210885}
  - {fileID: 110230232}
  - {fileID: 110235120}
  - {fileID: 110270884}
  - {fileID: 110266400}
  - {fileID: 110204808}
  - {fileID: 110209637}
  - {fileID: 110223416}
  - {fileID: 110299098}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110299098}
      second:
      - {fileID: 110193630}
    data:
      first: {fileID: 110223416}
      second:
      - {fileID: 110155654}
    data:
      first: {fileID: 110209637}
      second:
      - {fileID: 110144184}
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110160890}
      - {fileID: 110168960}
      - {fileID: 110129482}
      - {fileID: 110107887}
    data:
      first: {fileID: 110204808}
      second:
      - {fileID: 110142830}
    data:
      first: {fileID: 110207592}
      second:
      - {fileID: 110127248}
    data:
      first: {fileID: 110207708}
      second:
      - {fileID: 110146445}
    data:
      first: {fileID: 110210885}
      second:
      - {fileID: 110131322}
    data:
      first: {fileID: 110221970}
      second:
      - {fileID: 110189519}
    data:
      first: {fileID: 110230232}
      second:
      - {fileID: 110143060}
    data:
      first: {fileID: 110235120}
      second:
      - {fileID: 110158831}
    data:
      first: {fileID: 110240075}
      second:
      - {fileID: 110196299}
    data:
      first: {fileID: 110242845}
      second:
      - {fileID: 110111838}
    data:
      first: {fileID: 110254033}
      second:
      - {fileID: 110106145}
    data:
      first: {fileID: 110266400}
      second:
      - {fileID: 110122600}
    data:
      first: {fileID: 110267744}
      second:
      - {fileID: 110170403}
    data:
      first: {fileID: 110270884}
      second:
      - {fileID: 110142693}
    data:
      first: {fileID: 110272663}
      second:
      - {fileID: 110125542}
      - {fileID: 110150997}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -48, y: -156, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
